# 51-scrna-seq-pipeline

./: README.md  pyproject.toml
frontend/: index.html  umap_deckgl.json
output/: umap_deckgl.json
src/scrna/: __init__.py  __main__.py  cluster.py  demo.py  export.py  hvg.py  io.py  normalize.py  pca.py  pipeline.py  qc.py  trajectory.py  umap_numba.py
src/scrna/__pycache__/: umap_numba._compute_knn_distances-28.py312.1.nbc  umap_numba._compute_knn_distances-28.py312.2.nbc  umap_numba._compute_knn_distances-28.py312.nbi  umap_numba._compute_membership_strengths-112.py312.1.nbc  umap_numba._compute_membership_strengths-112.py312.nbi  umap_numba._compute_membership_strengths-63.py312.1.nbc  umap_numba._compute_membership_strengths-63.py312.nbi  umap_numba._optimize_layout-141.py312.1.nbc  umap_numba._optimize_layout-141.py312.nbi  umap_numba._optimize_layout-92.py312.1.nbc  umap_numba._optimize_layout-92.py312.nbi  umap_numba._smooth_knn_dist-14.py312.1.nbc  umap_numba._smooth_knn_dist-14.py312.nbi  umap_numba._smooth_knn_dist-63.py312.1.nbc  umap_numba._smooth_knn_dist-63.py312.nbi
src/scrna_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
