[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrna-pipeline"
version = "0.1.0"
description = "Hardcore scRNA-seq analysis pipeline with Numba-accelerated UMAP and Deck.gl visualization"
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.10.0",
    "h5py>=3.10.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "numba>=0.59.0",
    "scikit-learn>=1.3.0",
    "leidenalg>=0.10.0",
    "igraph>=0.11.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.3.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
